--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,10 @@
         <a href=#>Länk2</a>
         <a href=#>Länk3</a>
         <h1 class="Rubrik">Rubrik 1</h1>
+    </div>
+    <div class="middle">
+        <h1 class="Vänster">Vänster Rubrik</h1>
+        <h1 class="Höger">Höger Rubrik</h1>
     </div>
 </body>
 </html>
